# POO-2025

Parcial1/: empresaagricola.cpp  servlimpieza.cpp
clase3/GUIA_3_CSTRING/: CMakeLists.txt  main.cpp
clase3/GUIA_3_VECT_DIN/: CMakeLists.txt  main.cpp
clase4/Clase-14-04-25/: CMakeLists.txt  main.cpp  vectordinamico.cpp  vectordinamico.h
clase4/Ej1-Complejos/: CMakeLists.txt  complejo.cpp  complejo.h  main.cpp
clase4/Ej4-VectorDinamico/: CMakeLists.txt  main.cpp  vectordinamico.cpp  vectordinamico.h
clase4/Ej5-Alumnos/: CMakeLists.txt  alumno.cpp  alumno.h  curso.h
clase4/Ej6Billetes/: Ej6Billetes.pro  cambio.cpp  cambio.h  main.cpp
clase4/Ej7Cumpleaños/: main.cpp
clase4/deposito/: main.cpp
clase6/Serie/: juego.cpp  serieprimo.cpp  serieprimo.h
