cmake_minimum_required(VERSION 3.16)

project(GUIA_3_CSTRING LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(GUIA_3_CSTRING main.cpp)

include(GNUInstallDirs)
install(TARGETS GUIA_3_CSTRING
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
